--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="vincent.png" 
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Escola Van Gogh </li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
@@ -18,11 +18,11 @@
 
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <h2 class="escola-titulo">Estudos sobre Vincent Van Gogh </h2>
+            <p class="escola-texto-um"> Aqui será ensinado um pouco sobre o famoso pintor Vincent Van Gogh </p>
+            <p class="escola-texto-dois"> Vincent Van Gogh foi um pintor pós-impressionista uma das figuras mais famosas e influentes da história da arte ocidental</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro">
+        <img class="escola-imagem" src="Formula-bro.png" alt="">
     </section>
 </body>
 
