--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="vincent.png" 
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola Van Gogh </li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">Estudio </li>
+            <li class="cabecalho-lista-item">Artista</li>
         </ul>
     </header>
 
@@ -22,7 +22,7 @@
             <p class="escola-texto-um"> Aqui será ensinado um pouco sobre o famoso pintor Vincent Van Gogh </p>
             <p class="escola-texto-dois"> Vincent Van Gogh foi um pintor pós-impressionista uma das figuras mais famosas e influentes da história da arte ocidental</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="">
+        <img class="escola-imagem" src="van-gogh-profile.png" alt="imagem do van gogh">
     </section>
 </body>
 
